--- a/Lab4_Linux_LPE/Dockerfile
+++ b/Lab4_Linux_LPE/Dockerfile
@@ -1,7 +1,17 @@
 FROM ubuntu:latest
 
+COPY . /var/www/html
+
+WORKDIR /var/www/html
+
+ARG DEBIAN_FRONTEND=noninteractive
+
 RUN apt-get update -y && \
     apt install apache2 -y && \
-    chmod u+s $(which cat)
+    apt install python3 -y && \
+    chmod u+s $(which python3) && \
+    apt install openssl -y && \
+    apt-get install php7.4 -y && \
+    useradd kmastudent -p $(openssl passwd -1 -salt kmastudent kmasec)
 
 ENTRYPOINT  [ "apache2ctl", "-D", "FOREGROUND"]
