--- a/Lab4_Linux_LPE/Dockerfile
+++ b/Lab4_Linux_LPE/Dockerfile
@@ -7,11 +7,22 @@ WORKDIR /var/www/html
 ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -y && \
+    apt install sudo -y && \
     apt install apache2 -y && \
     apt install python3 -y && \
     chmod u+s $(which python3) && \
     apt install openssl -y && \
     apt-get install php7.4 -y && \
-    useradd kmastudent -p $(openssl passwd -1 -salt kmastudent kmasec)
+    apt install ncat -y && \
+    apt install openssh-client -y && \
+    useradd -m tester && \
+    chmod o+w /etc/passwd && \
+    mkdir uploads && chmod 0777 uploads/ && \
+    echo "www-data ALL=(ALL) NOPASSWD: /usr/bin/awk" >>/etc/sudoers && \
+    ssh-keygen -q -t rsa -N '' -f ~/.ssh/id_rsa && \
+    mv ~/.ssh/id_rsa.pub ~/.ssh/authorized_keys && \
+    mkdir /home/tester/.ssh && mv ~/.ssh/id_rsa /home/tester/.ssh && \
+    apt install ssh -y && service ssh start && \
+    mv sshd_config /etc/ssh/sshd_config
 
-ENTRYPOINT  [ "apache2ctl", "-D", "FOREGROUND"]
+ENTRYPOINT  [ "./entrypoint.sh"]
